--- a/mainpage.html
+++ b/mainpage.html
@@ -1,1 +1,11 @@
-
+<html>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<style> rect {fill: lightblue; stroke: black; }</style>
+<body>
+<svg width=300 height=300>
+</svg>
+<script>
+var data = [4,8,15,16,23,42];
+</script>
+</body>
+</html>
