--- a/mainpage.html
+++ b/mainpage.html
@@ -1,11 +1,16 @@
-<html>
-<script src='https://d3js.org/d3.v5.min.js'></script>
-<style> rect {fill: lightblue; stroke: black; }</style>
-<body>
-<svg width=300 height=300>
+<!DOCTYPE html>
+<h1>United States Car Imports by Year</h1>
+
+<!-- Add a bit of text -->
+<p>A deeper dive into import car popularity</p>
+
+<!-- Add a svg shape. Note that the 'target' class is attributed to the circle -->
+<svg> 
+  <circle class="target" style="fill: #69b3a2" stroke="black" cx=50 cy=50 r=40></circle>
 </svg>
+<script src="https://d3js.org/d3.v4.js"></script>
 <script>
-var data = [4,8,15,16,23,42];
+d3
+  .select(".target")  // select the elements that have the class 'target'
+  .style("stroke-width", 8) // change their style: stroke width is not equal to 8 pixels
 </script>
-</body>
-</html>
