--- a/mainpage.html
+++ b/mainpage.html
@@ -75,6 +75,18 @@ function update(data) {
   u
     .exit()
     .remove()
+   
+    
+  svg
+  .selectAll('mySlices')
+  .data(data_ready)
+  .enter()
+  .append('text')
+  .text(function(d){ return "grp " + d.data.key})
+  .attr("transform", function(d) { return "translate(" + arcGenerator.centroid(d) + ")";  })
+  .style("text-anchor", "middle")
+  .style("font-size", 17)
+
 
 }
 
