--- a/mainpage.html
+++ b/mainpage.html
@@ -14,6 +14,19 @@
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
+<body>
+
+<h1>Birds vs Planes, Aviations Feathered Flight Risks Analyzed.</h1>
+
+<p>Flying a plane can be extremely unnerving for some. While daily tasks like driving to work carry much more risk, the act of flying in a plane cause some passengers to worry more than they should. While bird strikes don't even fall into the National Transportation Safety Boards Top 10 causes for aviation accidents, they stil strike fear into some. This journey will vizualise what bird related risks you are taking on when you fly. </p>
+
+<h2>Instructions:</h2>
+
+<p>Type Here. Type Here. Type Here. Type Here. Type Here. Type Here. 
+</p>
+
+
+</body>
 
 <script>
 
