--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 <button onclick="update(Overview)">Overview</button>
-<button onclick="update(Millenials)">Millenials</button>
+<button onclick="update(Millennials)">Millennials</button>
 <button onclick="update(Genx)">Generation X</button>
 <button onclick="update(BB)">Baby Boomers</button>
 <button onclick="update(Trad)">Traditionalists</button>
@@ -32,7 +32,7 @@
 <h1>Why can't Millenials afford to buy a house?</h1>
 
 
-<p>A common claim these days is that due to aggressive real estate investing from older generations, Millenials are now priced out of the housing market and cannot afford to purchase. This locks them into a permanent renting situation in which wealth is consistently siphoned out of our generation and into older generations who now own these properties. While there has been a distinct increase in sentiment towards real estate as a form of investment which causes a housing market price increase, many people within such generations claim that the reason millenials can't afford housing is their spending habits. This journey aims to analyze generational spending habits and compare the differences in non-essential spending vs. essential spending in todays society. </p>
+<p>A common claim these days is that due to aggressive real estate investing from older generations, Millennials are now priced out of the housing market and cannot afford to purchase. This locks them into a permanent renting situation in which wealth is consistently siphoned out of our generation and into older generations who now own these properties. While there has been a distinct increase in sentiment towards real estate as a form of investment which causes a housing market price increase, many people within such generations claim that the reason millenials can't afford housing is their spending habits. This journey aims to analyze generational spending habits and compare the differences in non-essential spending vs. essential spending in todays society. </p>
 
 <h2>Categories:</h2>
 
@@ -74,7 +74,7 @@ var svg = d3.select("#my_dataviz")
 // Data taken from: https://data.world/carmichael/consumer-spending/workspace/file?agentid=makeovermonday&datasetid=2019w13&filename=Consumer+Spending+by+Generation.csv
 var Overview 	= {restuarants: 17.0, groceries: 26.2, gas:8.9, pharmacies:4.0, furniture_building:7.8, elec_hobbies_clothing:15.5, general_misc:20.7, tooltip:"Overview",
 info1: "This is the average", info2: "spending across every", info3: "generation from 1925 to", info4: "the late 90's"}
-var Millenials  = {restuarants: 23.8, groceries: 21.7, gas:10.8,pharmacies:3.0, furniture_building:4.5, elec_hobbies_clothing:18.5, general_misc:17.7, tooltip:"Millenials",
+var Millennials  = {restuarants: 23.8, groceries: 21.7, gas:10.8,pharmacies:3.0, furniture_building:4.5, elec_hobbies_clothing:18.5, general_misc:17.7, tooltip:"Millenials",
 info1: "Millenials spend the", info2: "most on gas, eating out, ", info3: "and the hobbies/etc. sector", info4: "All of which are non essential."}
 var Genx 		= {restuarants: 17.7, groceries: 25.3, gas:9.7, pharmacies:2.9, furniture_building:7.3, elec_hobbies_clothing:16.8, general_misc:20.3, tooltip:"Gen X",
 info1: "Gen X are also guilty", info2: "of increased non-essential", info3: "spending, but to a lesser", info4: "degree than millenials."}
