--- a/mainpage.html
+++ b/mainpage.html
@@ -51,7 +51,15 @@
 <p>Misc.: Anything that does not fall into the above categories. 
 </p>
 
-
+<h2>Generations:</h2>
+<p>Traditionalists (The Silent Generation): 1928-1945, Ages 76-93. 
+</p>
+<p>The Baby Boomer Generation: 1946-1964, Ages 57-75. 
+</p>
+<p>Generation X: 1965-1980, Ages 41-56. 
+</p>
+<p>The Millennial Generation: 1981-1996, Ages 25-40. 
+</p>
 </body>
 
 <script>
