--- a/mainpage.html
+++ b/mainpage.html
@@ -29,10 +29,10 @@
 
 <body>
 
-<h1>Why can't Millenials afford to buy a house?</h1>
+<h1>Why Can't Millenials Afford to Buy a House?</h1>
 
 
-<p>A common claim these days is that due to aggressive real estate investing from older generations, Millennials are now priced out of the housing market and cannot afford to purchase. This locks them into a permanent renting situation in which wealth is consistently siphoned out of our generation and into older generations who now own these properties. While there has been a distinct increase in sentiment towards real estate as a form of investment which causes a housing market price increase, many people within such generations claim that the reason millenials can't afford housing is their spending habits. This journey aims to analyze generational spending habits and compare the differences in non-essential spending vs. essential spending in todays society. </p>
+<p><font size="+1">A common claim these days is that due to aggressive real estate investing from older generations, Millennials are now priced out of the housing market and cannot afford to purchase. This locks them into a permanent renting situation in which wealth is consistently siphoned out of their generation and into older generations who now own these properties. There has been a distinct increase in sentiment towards real estate as a form of investment which causes a housing market price increase. On the contrary, many people within such generations claim that the reason millenials can't afford housing is their spending habits. This journey aims to analyze generational spending habits and compare the differences in non-essential spending vs. essential spending in todays society.</font> </p>
 
 <h2>Categories:</h2>
 
